--- a/src/sass/base/_base.scss
+++ b/src/sass/base/_base.scss
@@ -5,9 +5,11 @@
   margin: 0;
   box-sizing: border-box;
 
+  -webkit-tap-highlight-color: transparent;
+
   &:focus,
   &:active {
-    outline: none;
+    outline: none !important;
   }
 }
 
