--- a/src/sass/components/_messages.scss
+++ b/src/sass/components/_messages.scss
@@ -15,11 +15,20 @@
 
     position: relative;
 
+    @include respond(tab-port) {
+      width: 100%;
+      min-height: 70vh;
+    }
+
     &_search {
       @extend .home-feed-posts-card-content-bottom_comment-input;
       margin: 1rem 0rem 4rem 0 !important;
       width: 90%;
       height: 6rem;
+
+      @include respond(tab-port) {
+        width: 100%;
+      }
 
       &-results {
         position: absolute;
@@ -31,51 +40,56 @@
         // overflow-y: scroll;
 
         &-each {
-            background-color: #454545;
-            border-top: 2px solid #000;
-            display: flex;
-            align-items: center;
-            margin-top: .5rem;
-            padding: .5rem 1rem;
-            transition: all .2s ease-out;
+          background-color: #454545;
+          border-top: 2px solid #000;
+          display: flex;
+          align-items: center;
+          margin-top: 0.5rem;
+          padding: 0.5rem 1rem;
+          transition: all 0.2s ease-out;
+          position: relative;
+
+          &,
+          &:link,
+          &:visited {
+            color: #eee;
+            text-decoration: none;
+          }
+
+          &:hover {
+            background-color: #565656;
+            cursor: pointer;
+          }
+
+          &_avatar {
+            @extend .home-feed-posts-card-avatar;
+
+            height: 60px;
+            min-width: 60px;
+            max-width: 60px;
+
+            @include respond(tab-port) {
+              height: 40px;
+              min-width: 40px;
+              max-width: 40px;
+            }
+
+            &-img {
+              @extend .home-feed-posts-card-avatar-img;
+            }
+          }
+          &_username {
             position: relative;
 
-            &,
-            &:link,
-            &:visited {
-                color: #eee;
-                text-decoration: none;
+            &_action {
+              font-size: 1.6rem;
+              position: absolute;
+              right: 20px;
             }
-
-            &:hover {
-                background-color: #565656;
-                cursor: pointer;
-            }
-
-            &_avatar {
-                @extend .home-feed-posts-card-avatar;
-
-                height: 60px;
-                min-width: 60px;
-                max-width: 60px;
-
-                &-img {
-                    @extend .home-feed-posts-card-avatar-img;
-                }
-            }
-            &_username {
-                position: relative;
-
-                &_action {
-                    font-size: 1.6rem;
-                    position: absolute;
-                    right: 20px;
-                }
-            }
+          }
         }
       }
     }
-
 
     &-card {
       display: flex;
@@ -86,6 +100,10 @@
       width: 90%;
       transition: all 0.2s ease-out;
       //   margin-right: 8rem;
+      
+      @include respond(tab-port) {
+        width: 100%;
+      }
 
       &,
       &:link,
@@ -114,6 +132,12 @@
         overflow: hidden;
         display: block;
 
+        @include respond(tab-port) {
+          height: 40px;
+          min-width: 40px;
+          max-width: 40px;
+        }
+
         &-image {
           object-fit: cover;
           height: 100%;
@@ -132,8 +156,18 @@
     display: flex;
     justify-content: center;
 
+    @include respond(tab-port) {
+      display: fixed;
+      width: 0;
+      margin: 0;
+    }
+
     &_empty {
       margin-top: 5rem;
+
+      @include respond(tab-port) {
+        display: none;
+      }
     }
   }
 }
@@ -151,6 +185,14 @@
   backdrop-filter: blur(5px);
   transition: all 0.2s ease-out;
 
+  @include respond(tab-port) {
+    top: 0;
+    z-index: 1000000;
+    right: 0;
+    width: 100%;
+    height: 100%;
+  }
+
   &__content {
     height: 80rem;
     width: 100%;
@@ -163,6 +205,10 @@
     opacity: 1;
     // transform: translate(20%, -100%) scale(1);
     transition: all 0.3s ease-in-out;
+
+    @include respond(tab-port){
+      height: 100%;
+    }
   }
 
   &__top {
@@ -173,7 +219,15 @@
     align-items: center;
     background-color: #222;
     color: #ddd;
-    font-size: 1.6rem;
+    font-size: 2rem;
+
+    @include respond(tab-port){
+      font-size: 2.4rem;
+    }
+
+    @include respond(tab-port) {
+      height: 10rem;
+    }
 
     &-username {
       margin-left: 3rem;
@@ -211,7 +265,11 @@
       padding: 10px;
       cursor: default;
       border-radius: 15px;
-      font-size: 1.6rem;
+      font-size: 2rem;
+
+      @include respond(tab-port){
+        font-size: 2.4rem;
+      }
 
       &-receiver {
         float: left;
@@ -248,7 +306,7 @@
   &__bottom {
     width: 100%;
     height: 10%;
-    font-size: 1.6rem;
+    font-size: 2rem;
     // width: 100%;
     display: flex;
     flex-direction: column;
@@ -256,6 +314,11 @@
 
     // padding: 3rem 5rem;
     // vertical-align: middle;
+
+    @include respond(tab-port) {
+      height: 10rem;
+      font-size: 2.4rem;
+    }
 
     &-form {
       height: 100%;
@@ -276,6 +339,10 @@
         color: #ddd;
         outline: none;
 
+        @include respond(tab-port){
+          font-size: 2.4rem;
+        }
+
         &:required {
           box-shadow: none;
         }
@@ -291,12 +358,12 @@
         font-weight: 700;
         text-transform: uppercase;
         background-color: #232323;
-        transition: all .1s ease-out;
+        transition: all 0.1s ease-out;
 
         &:hover {
-            color: $green;
-            background-color: #000;
-            cursor: pointer;
+          color: $green;
+          background-color: #000;
+          cursor: pointer;
         }
       }
     }
@@ -334,7 +401,7 @@
     &:visited {
       color: #777;
       position: relative;
-      bottom: .2rem;
+      bottom: 0.2rem;
       right: 3rem;
       font-size: 3rem;
       text-decoration: none;
