--- a/src/sass/components/_profile.scss
+++ b/src/sass/components/_profile.scss
@@ -1,17 +1,27 @@
 .profile {
   width: 70%;
-  // background-color: #333;
   display: flex;
   flex-direction: column;
   padding: 3rem;
   margin-top: -3rem;
   margin-left: 45rem;
 
+  @include respond(tab-port) {
+    width: 100%;
+    padding: 0;
+    margin: 0;
+  }
+
   &-top {
     display: flex;
     justify-content: flex-start;
     align-items: center;
     padding-bottom: 5rem;
+
+    @include respond(tab-port) {
+      padding: 3rem 3rem 5rem;
+    }
+
     &-left {
       display: flex;
       align-items: center;
@@ -21,6 +31,11 @@
         width: 100px;
         border-radius: 50%;
         overflow: hidden;
+
+        @include respond(tab-port) {
+          height: 60px;
+          width: 60px;
+        }
 
         &_image {
           object-fit: cover;
@@ -79,6 +94,10 @@
     display: flex;
     flex-direction: column;
 
+    @include respond(tab-port) {
+      padding: 0rem 3rem;
+    }
+
     &_edit {
       @extend .form-input;
       background-color: #333;
@@ -119,6 +138,10 @@
         display: flex;
         font-size: 2rem;
         margin-top: 5rem;
+        
+        @include respond(tab-port) {
+          padding: 0rem 3rem;
+        }
 
         &_following {
         }
