--- a/src/sass/components/_messages.scss
+++ b/src/sass/components/_messages.scss
@@ -35,13 +35,12 @@
         top: 7rem;
         left: 0;
         width: 90%;
-        background-color: #000;
+        background-color: rgba(0,0,0,0.3);
         height: 500px;
         // overflow-y: scroll;
 
         &-each {
           background-color: #454545;
-          border-top: 2px solid #000;
           display: flex;
           align-items: center;
           margin-top: 0.5rem;
@@ -407,6 +406,11 @@
       text-decoration: none;
       display: inline-block;
       line-height: 1;
+
+      @include respond(tab-port){
+        font-size: 6rem;
+        color: #d11;
+      }
     }
 
     &:hover {
