--- a/src/index.css
+++ b/src/index.css
@@ -622,7 +622,22 @@ nav ul {
             height: 100%;
             width: 100%; }
         .home-feed-posts-card-avatar-post {
-          display: none; }
+          margin-right: 3rem;
+          border-radius: 50%;
+          border: none;
+          height: 70px;
+          min-width: 70px;
+          max-width: 70px;
+          background-color: #222;
+          overflow: hidden;
+          display: block; }
+          @media only screen and (max-width: 65em) {
+            .home-feed-posts-card-avatar-post {
+              display: none; } }
+          .home-feed-posts-card-avatar-post-img {
+            object-fit: cover;
+            height: 100%;
+            width: 100%; }
         .home-feed-posts-card-content {
           display: flex;
           flex-direction: column;
@@ -1186,8 +1201,12 @@ nav ul {
         top: 7rem;
         left: 0;
         width: 90%;
-        background-color: rgba(0, 0, 0, 0.3);
-        height: 500px; }
+        background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.3) 0%, rgba(0, 0, 0, 0.3) 50%, rgba(0, 0, 0, 0.2) 80%, rgba(0, 0, 0, 0) 100%);
+        height: 500px;
+        backdrop-filter: blur(2px); }
+        @media only screen and (max-width: 65em) {
+          .messages-people_search-results {
+            width: 100%; } }
         .messages-people_search-results-each {
           background-color: #454545;
           display: flex;
