--- a/src/sass/components/_messages.scss
+++ b/src/sass/components/_messages.scss
@@ -35,9 +35,14 @@
         top: 7rem;
         left: 0;
         width: 90%;
-        background-color: rgba(0,0,0,0.3);
+        background-image: linear-gradient(to bottom, rgba(0,0,0,0.3) 0%, rgba(0,0,0,0.3) 50%, rgba(0,0,0,0.2) 80%, rgba(0,0,0,0) 100%);
         height: 500px;
         // overflow-y: scroll;
+        backdrop-filter: blur(2px);
+
+        @include respond(tab-port) {
+          width: 100%;
+        }
 
         &-each {
           background-color: #454545;
